conf/k8s-resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conf-deployment
  namespace: api-gateway
  labels:
    app: conf
spec:
  replicas: 2
  selector:
    matchLabels:
      app: conf
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: conf
    spec:
      serviceAccountName: conf-sa
      containers:
      - name: conf
        image: ghcr.io/luka-j/matf-rs2-api-gateway-conf:sha-2c343222b6222ac0b73c95be5445047f27a15f72
        imagePullPolicy: Always
        ports:
        - containerPort: 5001
