conf/k8s-resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conf-service
  namespace: api-gateway
spec:
  selector:
    app: conf
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
